--- a/index.html
+++ b/index.html
@@ -3,54 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="w3.css">
-
+    <title>Inicio</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li>Formação</li>
-            <li>Cursos</li>
+            <li>Inicio</li>
+            <li>Radio</li>
             <li>Depoimentos de clinetes</li>
             <li>Contato</li>
 
         </ul>
 
+        <input type="radio" id="html" name="fav_language" value="HTML">
+<label for="html">HTML</label><br>
+<input type="radio" id="css" name="fav_language" value="CSS">
+<label for="css">CSS</label><br>
+<input type="radio" id="javascript" name="fav_language" value="JavaScript">
+<label for="javascript">JavaScript</label>
 
 
-    </nav>
-
-    <section>
-
-    <section>
-        <h1>Primeira secção</h1>
-    </section>
-
-    <section>
-        <h1>Segunda secção</h1>
-    </section>
-
-    <section>
-        <h1>Terceira secção</h1>
-    </section>
-
-    </section>
-        <div></div>
-
-
-    <form id="form10" class="form" action="index.html" method="post">
-
-    <label for="nome">Nome</label> <input type="text" placeholder="Letras"><br>  
-    <label for="nome">Email</label> <input type="text" placeholder="Email"><br>
-    <label for="nome">Telefone</label> <input type="text" placeholder="Numeros"><br>
-    
-    <input type="submit" value="Enviar">
-</form>
-
-    <h1>Hello World</h1>
-    <p>id="p.principal"</p>
-    
 </body>
 </html>
